--- a/frontend/src/css/nav.css
+++ b/frontend/src/css/nav.css
@@ -30,6 +30,7 @@
     top: 0;
     left: -100%;
     transition: 850ms;
+    z-index: 1;
 }
 
 .nav-menu.active {
